<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stud_reg"
        android:text="USER REGISTRATION"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textColorHighlight="#00695C"
        android:background="@color/colorPrimaryDark"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:id="@+id/first_name"
        android:layout_below="@+id/stud_reg"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_below="@+id/stud_reg"
        android:layout_toEndOf="@+id/first_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:id="@+id/last_name"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:hint="@string/username"
        android:id="@+id/user_name"
        android:textSize="20sp"
        android:layout_marginTop="50dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_email"
        android:text="@string/e_mail"
        android:layout_below="@+id/user_name"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_pass"
        android:layout_below="@+id/reg_email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="0dp"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        />



    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/conf_pass"
        android:layout_below="@+id/reg_email"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_toEndOf="@+id/reg_pass"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_below="@+id/reg_pass"
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorPrimaryDark"


        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_login"
        android:layout_below="@+id/conf_pass"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_toEndOf="@+id/register"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorPrimaryDark" />


</RelativeLayout>